# cli-chat-tool

./: .gitignore  Cargo.toml  Dockerfile  README  install.bat  install.ps1  install.sh
.github/workflows/: release.yml
crates/client/: Cargo.toml
crates/client/src/: chat.rs  colors.rs  crypto.rs  main.rs  network.rs  types.rs  ui.rs  utils.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  models.rs
crates/relay/: Cargo.toml
crates/relay/src/: broadcast.rs  db.rs  events.rs  main.rs  routes.rs  socket.rs  storage.rs  types.rs
docs/: install
