[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
common = { path = "../common" }
